fix(actions): top-align icons with multi-line action labels, fix #5284

--- a/src/assets/action.scss
+++ b/src/assets/action.scss
@@ -75,6 +75,7 @@
 		&:deep(.material-design-icon) {
 			width: var(--default-clickable-area);
 			height: var(--default-clickable-area);
+			align-self: flex-start;
 			opacity: $opacity_full;
 
 			.material-design-icon__svg {
